# .NSC-tokenless

./: GAPS_FIXED_2026_02_13.md  IMPLEMENTATION_SUMMARY.md  NPE_SOTA_ROADMAP.md  PHASE1_COMPLETION_REPORT.md  PHASE1_VALIDATION.py  PHASE2_COMPLETION_REPORT.md  PHASE2_VALIDATION.py  PHASE3_VALIDATION.py  README.md  SPEC.md  SYSTEM_REVIEW_2026_02_13.md  nsc_dashboard.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.py  simulation.py  tailwind.config.js  vite.config.js
.idx/: dev.nix
api/: __init__.py  main.py
api/routes/: execute.py  health.py  receipts.py  replay.py  validate.py
coherence_framework/: __init__.py  cli.py  conformance.py  schemas.py
docs/: conformance_levels.md  design_goals.md  index.md  terminology.md  versions.md
docs/glyphs/: ambiguity_recovery.md  glll_codebook.md  glll_decode.md  reject_control_row.md
docs/governance/: replay_verification.md
docs/language/: nsc_error_model.md  nsc_module_linking.md
docs/security/: integrity.md  safe_extensions.md  threat_model.md
nsc/: LICENSE.md  README.md  __init__.py  cli.py  npe_v0_1.py  npe_v1_0.py  npe_v2_0.py
nsc_tokenless.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
paper/: 01_Foundations.md  02_Operators.md  03_Formal_Derivation.md  04_Consistency.md  05_Meta_Structure.md  06_Experimental_Link.md  whitepaper.aux  whitepaper.fdb_latexmk  whitepaper.fls  whitepaper.out  whitepaper.tex
plans/: implementation_plan_v1_1.md  nsc_roadmap_v1_1.md
reports/: phase0_gap_report.md
schemas/: nsc_action_plan.schema.json  nsc_decode_report.schema.json  nsc_gate_report.schema.json  nsc_kernel_binding.schema.json  nsc_module_digest.schema.json  nsc_replay_report.schema.json
scripts/: phase0_spec_review.py  phase2_benchmark.py
src/: App.tsx
test-vectors/: canonical_json_hash_vectors.md  conformance_cases.md  hadamard_decode_vectors_n16.md
tests/: __init__.py  conftest.py  test_glyphs.py  test_governance.py  test_npe.py  test_npe_phase1.py  test_runtime.py  test_smoke.py
(+69 files in other folders)
