[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsc-tokenless"
version = "1.1.0"
description = "NSC Tokenless v1.1 - Tokenless execution engine with coherence governance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "tokenless", "coherence", "nsc", "noetican", "governance",
    "runtime", "evaluation", "glll", "decode"
]
authors = [
    {name = "Noetica Labs", email = "dev@noetica.ai"}
]

dependencies = [
    "jsonschema>=4.17.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "tensorflow",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pytest-httpx>=0.28.0",
]

[project.scripts]
nsc = "nsc.cli:main"

[project.urls]
Homepage = "https://github.com/noeticanlabs/coherence-framework"
Repository = "https://github.com/noeticanlabs/coherence-framework"
Issues = "https://github.com/noeticanlabs/coherence-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nsc*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
